@@ -24,7 +24,7 @@ class Gems_Default_ProjectInformationAction  extends \Gems_Controller_Action
      * @var \Gems_AccessLog
      */
     public $accesslog;
-    
+
     protected $_defaultParameters = array();
     protected $defaultParameters = array();
 
@@ -39,11 +39,11 @@ class Gems_Default_ProjectInformationAction  extends \Gems_Controller_Action
      * @var \Gems_Menu
      */
     public $menu;
-    
+
     protected $monitorParameters = array(
         'monitorJob' => 'getMaintenanceMonitorJob'
     );
-    
+
     protected $monitorSnippets = 'MonitorSnippet';
 
     /**
@@ -108,7 +108,7 @@ class Gems_Default_ProjectInformationAction  extends \Gems_Controller_Action
 
         return $data;
     }
-    
+
     /**
      *
      * @param array $input
@@ -216,7 +216,7 @@ class Gems_Default_ProjectInformationAction  extends \Gems_Controller_Action
 
         $this->_showText($this->_('Logged errors'), GEMS_ROOT_DIR . '/var/logs/errors.log', $this->_('Empty logfile'));
     }
-    
+
     public function getMaintenanceMonitorJob()
     {
         return $this->loader->getUtil()->getMonitor()->getReverseMaintenanceMonitor();
@@ -299,7 +299,7 @@ class Gems_Default_ProjectInformationAction  extends \Gems_Controller_Action
         $request = $this->getRequest();
         $this->_reroute(array($request->getActionKey() => 'index'));
     }
-    
+
     public function monitorAction() {
         if ($this->monitorSnippets) {
             $params = $this->_processParameters($this->monitorParameters);
