@@ -19,12 +19,14 @@ salt =
 ;
 ; On production pwd should be empty or longer than 10 chars
 ; and quoted if it contains special characters.
+;
+; For both IP ranges: separate with | examples: 10.0.0.0-10.0.0.255, 10.10.*.*, 10.10.151.1 or 10.10.151.1/25'
 ;----------------------------------------------------------------------
 admin.user = superadmin
 admin.pwd  = PASSWD
-;admin.ipRanges = 10.0.0.0-10.255.255.255;192.168.0.0-192.168.255.255
-admin.2fa.exclude = 127.0.0.1|::1
-admin.2fa.key =
+;admin.ipRanges = 10.*.*.*|192.168.1.1/24|192.168.10.25
+admin.2fa.exclude = "127.0.0.1|::1"
+; admin.2fa.key = GoogleAuthenticator::
 ; Adjust & open this url for adding to Google Authorizer
 ; https://chart.googleapis.com/chart?chs=200x200&chld=M|0&cht=qr&chl=otpauth%3A%2F%2Ftotp%2Fsuper%3Fsecret%3D >admin.2fa.key< %26issuer%3DCarefacts%2B-%2BGemsTracker
 
